[gd_scene load_steps=2 format=3 uid="uid://clqyaaowq4uap"]

[ext_resource type="Script" path="res://Screens/main_menu.gd" id="1_l4us8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l4us8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -21.5
offset_right = 67.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="NewRun" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Run"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
